--- a/countdown.html
+++ b/countdown.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Countdown</title>
+  <title>EasyTimer - Countdown</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
